--- a/charts/fluentd/values.yaml
+++ b/charts/fluentd/values.yaml
@@ -24,7 +24,7 @@ output:
 boot:
   install_build_tools: false
 
-# Any custom fluentd environment variables (https://github.com/deis/fluentd#configuration)
+# Any custom fluentd environment variables (https://github.com/deisthree/fluentd#configuration)
 # can be specified as key-value pairs under daemon_environment.
 daemon_environment:
   #<example-env>: <example-value>
