--- a/charts/fluentd/Chart.yaml
+++ b/charts/fluentd/Chart.yaml
@@ -1,5 +1,5 @@
 name: fluentd
-home: https://github.com/deisthree/fluentd
+home: https://github.com/teamhephy/fluentd
 version: <Will be populated by the ci before publishing the chart>
 description: Log shipping mechanism for Deis Workflow.
 maintainers:
