feat(fluentd): use official fluent/fluentd:1.3 docker image

--- a/rootfs/Dockerfile
+++ b/rootfs/Dockerfile
@@ -1,47 +1,27 @@
-FROM quay.io/deis/base:v0.3.6
+FROM fluent/fluentd:v1.3
 
-COPY . /
+COPY fluentd /fluentd
+COPY entrypoint.sh /bin/
+RUN chmod +x /bin/entrypoint.sh
 
-RUN buildDeps='g++ gcc make ruby-dev'; \
-    apt-get update && \
-    apt-get install -y \
-        $buildDeps \
-        ruby && \
-    export FLUENTD_VERSION=0.14.13 && \
-    gem install --no-document fluentd -v $FLUENTD_VERSION && \
-    gem install bundler && \
-    bundle install --gemfile=/opt/fluentd/deis-output/Gemfile && \
-    rake --rakefile=/opt/fluentd/deis-output/Rakefile build && \
-    fluent-gem install --no-document fluent-plugin-kubernetes_metadata_filter -v 0.25.3  && \
-    fluent-gem install --no-document fluent-plugin-elasticsearch -v 2.3.0 && \
-    fluent-gem install --no-document fluent-plugin-remote_syslog -v 0.3.2 && \
-    fluent-gem install --no-document fluent-plugin-sumologic-mattk42 -v 0.0.4 && \
-    fluent-gem install --no-document fluent-plugin-gelf-hs -v 1.0.4 && \
-    fluent-gem install --no-document influxdb -v 0.3.2 && \
-    fluent-gem install --no-document nsq-ruby -v 1.7.0 && \
-    fluent-gem install --local /opt/fluentd/deis-output/pkg/fluent-plugin-deis_output-0.1.0.gem && \
-    # cleanup
-    apt-get purge -y --auto-remove $buildDeps && \
-    apt-get autoremove -y && \
-    apt-get clean -y && \
-    # package up license files if any by appending to existing tar
-    COPYRIGHT_TAR='/usr/share/copyrights.tar'; \
-    gunzip -f $COPYRIGHT_TAR.gz; tar -rf $COPYRIGHT_TAR /usr/share/doc/*/copyright; gzip $COPYRIGHT_TAR && \
-    rm -rf \
-        /usr/share/doc \
-        /usr/share/man \
-        /usr/share/info \
-        /usr/share/locale \
-        /var/lib/apt/lists/* \
-        /var/log/* \
-        /var/cache/debconf/* \
-        /etc/systemd \
-        /lib/lsb \
-        /lib/udev \
-        /usr/lib/x86_64-linux-gnu/gconv/IBM* \
-        /usr/lib/x86_64-linux-gnu/gconv/EBC* && \
-    bash -c "mkdir -p /usr/share/man/man{1..8}"
+RUN apk add bash findutils
+RUN apk add --update --virtual .build-deps sudo build-base ruby-dev \
+    &&  gem install bundler \
+    &&  bundle config --global silence_root_warning 1 \
+    &&  bundle install --gemfile=/fluentd/deis-output/Gemfile \
+    &&  rake --rakefile=/fluentd/deis-output/Rakefile build \
+    &&  fluent-gem install --no-document fluent-plugin-kubernetes_metadata_filter -v 2.1.4 \
+    &&  fluent-gem install --no-document fluent-plugin-elasticsearch -v 2.12.0 \
+    &&  fluent-gem install --no-document fluent-plugin-remote_syslog -v 1.0.0 \
+    &&  fluent-gem install --no-document fluent-plugin-sumologic-mattk42 -v 0.0.4 \
+    &&  fluent-gem install --no-document fluent-plugin-gelf-hs -v 1.0.7 \
+    &&  fluent-gem install --no-document influxdb -v 0.6.1 \
+    &&  fluent-gem install --no-document nsq-ruby -v 2.3.1 \
+    &&  fluent-gem install --local /fluentd/deis-output/pkg/fluent-plugin-deis_output-0.1.0.gem \
+    &&  sudo gem sources --clear-all \
+    &&  apk del .build-deps \
+    &&  rm -rf /var/cache/apk/* /root/.gem/ruby/*/cache/*.gem
 
-COPY /var /var
+ENTRYPOINT ["/bin/entrypoint.sh"]
 
-CMD ["/opt/fluentd/sbin/boot"]
+CMD ["/fluentd/sbin/boot"]
