--- a/charts/fluentd/templates/logger-fluentd-daemon.yaml
+++ b/charts/fluentd/templates/logger-fluentd-daemon.yaml
@@ -1,4 +1,4 @@
-apiVersion: {{ .Values.global.api_group }}
+apiVersion: {{ template "APIVersion" . }}
 kind: DaemonSet
 metadata:
   name: deis-logger-fluentd
