chore(fluentd): rename parts from deis to hephy
Signed-off-by: Cryptophobia <aouzounov@gmail.com>

--- a/charts/fluentd/Chart.yaml
+++ b/charts/fluentd/Chart.yaml
@@ -1,7 +1,7 @@
 name: fluentd
 home: https://github.com/teamhephy/fluentd
 version: <Will be populated by the ci before publishing the chart>
-description: Log shipping mechanism for Deis Workflow.
+description: Log shipping mechanism for Hephy Workflow.
 maintainers:
-  - name: Deis Team
-    email: engineering@deis.com
+  - name: Team Hephy
+    email: team@teamhephy.com
