chore(fluentd): upgrade fluentd
Signed-off-by: Cryptophobia <aouzounov@gmail.com>

--- a/manifests/deis-logger-fluentd-daemon.yaml
+++ b/manifests/deis-logger-fluentd-daemon.yaml
@@ -20,7 +20,7 @@ spec:
       serviceAccount: deis-logger-fluentd
       containers:
       - name: deis-logger-fluentd
-        image: quay.io/deisci/fluentd:canary
+        image: hephy/fluentd:canary
         imagePullPolicy: Always
         volumeMounts:
         - name: varlog
