fix(charts): skipped value for daemon_environment: Not a table
Signed-off-by: Cryptophobia <aouzounov@gmail.com>

--- a/charts/fluentd/values.yaml
+++ b/charts/fluentd/values.yaml
@@ -27,7 +27,7 @@ boot:
 # Any custom fluentd environment variables (https://github.com/teamhephy/fluentd#configuration)
 # can be specified as key-value pairs under daemon_environment.
 daemon_environment:
-  #<example-env>: <example-value>
+  CONTAINER_TAIL_PARSER_TYPE: json
 
 # Role-Based Access Control for Kubernetes >= 1.5
 global:
