--- a/charts/fluentd/templates/logger-fluentd-daemon.yaml
+++ b/charts/fluentd/templates/logger-fluentd-daemon.yaml
@@ -86,7 +86,7 @@ spec:
             value: {{ $value | quote }}
           {{- end }}
           - name: DEIS_NSQD_ADDRS
-            value: "{{range $i := until $nsqdNodeCount}}deis-nsqd-{{$i}}.deis-nsqd.{{ $.Release.Namespace }}.svc.cluster.local:{{$.Values.nsqd.tcp_port}}{{if lt (add 1 $i) $nsqdNodeCount}},{{end}}{{end}}"
+            value: "deis-nsqd.{{ $.Release.Namespace }}.svc.cluster.local:{{$.Values.nsqd.tcp_port}}"
         volumeMounts:
         - name: varlog
           mountPath: /var/log
