Add affinity support.

--- a/charts/fluentd/templates/logger-fluentd-daemon.yaml
+++ b/charts/fluentd/templates/logger-fluentd-daemon.yaml
@@ -23,6 +23,10 @@ spec:
         heritage: deis
         app: deis-logger-fluentd
     spec:
+{{- with .Values.global.affinity }}
+      affinity:
+{{ toYaml . | indent 8 }}
+{{- end }}
       serviceAccount: deis-logger-fluentd
       containers:
       - name: deis-logger-fluentd
