--- a/charts/fluentd/Chart.yaml
+++ b/charts/fluentd/Chart.yaml
@@ -1,6 +1,6 @@
 name: fluentd
 home: https://github.com/teamhephy/fluentd
-version: <Will be populated by the ci before publishing the chart>
+version: 2.15.2
 description: Log shipping mechanism for Hephy Workflow.
 maintainers:
   - name: Team Hephy
