--- a/charts/fluentd/values.yaml
+++ b/charts/fluentd/values.yaml
@@ -1,6 +1,6 @@
 org: "hephy"
-pull_policy: "Always"
-docker_tag: canary
+pull_policy: "IfNotPresent"
+docker_tag: v2.15.1
 # limits_cpu: "100m"
 # limits_memory: "50Mi"
 
