--- a/charts/fluentd/Chart.yaml
+++ b/charts/fluentd/Chart.yaml
@@ -1,7 +1,8 @@
+apiVersion: v2
 name: fluentd
 home: https://github.com/teamhephy/fluentd
-version: 2.15.2
+version: 2.15.3
 description: Log shipping mechanism for Hephy Workflow.
 maintainers:
-  - name: Team Hephy
-    email: team@teamhephy.com
+- name: Team Hephy
+  email: team@teamhephy.com
